<resources>
    <string name="ttl_home_title">Need help with anything?</string>
    <string name="ttl_home_description">Select your preferred channel or message us directly from here.</string>
    <string name="ttl_home_channel_description">Click on one of the channels to get started</string>
    <string name="ttl_create_form_title">New Message</string>
    <string name="ttl_create_form_description">Please fill out the form below before you leave a message</string>
    <string name="ttl_full_name">Full Name</string>
    <string name="ttl_enter_full_name">Enter full name</string>
    <string name="ttl_email_address">Email Address</string>
    <string name="ttl_enter_email_address">Enter email address</string>
    <string name="ttl_topic">Topic</string>
    <string name="ttl_select_topic">Select topic</string>
    <string name="ttl_message">Message</string>
    <string name="ttl_conversations">Conversations</string>
    <string name="ttl_messages">Messages</string>
    <string name="ttl_type_message_here">Type message here</string>
    <string name="ttl_enter_your_message">Enter your message</string>
    <string name="ttl_send_message">Send Message</string>
    <string name="ttl_message_us_directly">Message Us Directly</string>
    <string name="ttl_talk_to_agent">Talk to Agent</string>
    <string name="ttl_new_conversation">New Conversation</string>
    <string name="ttl_your_messages">Your messages</string>
    <string name="ttl_see_all_messages">See All Messages</string>
    <string name="ttl_new_message">New Message</string>
    <string name="ttl_or_uppercase">OR</string>
    <string name="ttl_ok">OK</string>
    <string name="ttl_cancel">Cancel</string>
    <string name="ttl_leave_a_review">Leave a review</string>
    <string name="ttl_leave_a_review_ellipsis">Leave a review…</string>
    <string name="ttl_rate_your_conversation">Rate your conversation</string>
    <string name="ttl_comment">Comment</string>
    <string name="ttl_optional">(Optional)</string>
    <string name="ttl_submit">Submit</string>
    <string name="ttl_submit_review">Submit review</string>
    <string name="ttl_review_submitted">Review submitted</string>
    <string name="ttl_thank_you_exclamation">Thank You!</string>
    <string name="ttl_review_submitted_message">Your feedback is highly appreciated and will help us to improve our ability to serve you and other users!</string>
    <string name="ttl_successfully_logged_in">Successfully logged in.</string>
    <string name="ttl_mark_as_resolved">Mark as Resolved</string>
    <string name="ttl_faq">FAQ</string>
    <string name="ttl_close_case">Close Case</string>
    <string name="ttl_close_case_dialog_message">This case will be closed and you wont be able to further send messages or receive assistance regarding this case. Would you like to proceed?</string>
    <string name="ttl_url_copied_to_clipboard">Link copied to clipboard.</string>
    <string name="ttl_email_copied_to_clipboard">Email address copied to clipboard.</string>
    <string name="ttl_phone_copied_to_clipboard">Phone number copied to clipboard.</string>
    <string name="ttl_format_d_max_open_cases">You can only have maximum %d open cases at the same time.</string>

    <string name="ttl_error">Error</string>
    <string name="ttl_error_message_general">Something went wrong, please try again.</string>
    <string name="ttl_error_message_offline">Oops! It seems like you are offline, please check your connection.</string>
    <string name="ttl_error_message_full_name_empty">Please enter your name.</string>
    <string name="ttl_error_message_email_empty">Please enter your email address.</string>
    <string name="ttl_error_message_email_invalid">Email address format is invalid.</string>
    <string name="ttl_error_message_topic_empty">Please select a topic.</string>
    <string name="ttl_error_message_message_empty">Please enter a message.</string>
    <string name="ttl_error_not_initialized">TapTalkLive is not initialized. Please call TapTalkLive.init()</string>
    <string name="ttl_error_xc_room_id_empty">Unable to fetch TapTalk chat room</string>
    <string name="ttl_error_taptalk_auth_ticket_empty">Unable to request TapTalk authentication ticket.</string>
    <string name="ttl_error_field_required">This field is required</string>
    <string name="ttl_error_failed_to_submit">Failed to Submit</string>
    <string name="ttl_error_message_submit_review">There’s an error while submitting, please try to resubmit your rating of this conversation.</string>
    <string name="ttl_case_created_chat_room_error">Case successfully created, but there was an error while fetching chat room data, please reopen the live chat if it does not show up.</string>

    <string name="ttl_rating_0">No Rating</string>
    <string name="ttl_rating_1">Horrible</string>
    <string name="ttl_rating_2">Not good</string>
    <string name="ttl_rating_3">Okay</string>
    <string name="ttl_rating_4">Good</string>
    <string name="ttl_rating_5">Excellent</string>
</resources>
