<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activity.TTLCreateCaseFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ttlDefaultBackgroundColor">

        <View
            android:layout_width="match_parent"
            android:layout_height="244dp"
            android:background="@color/ttlDefaultNavBarBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ttl_bg_white_rounded_8dp"
            android:padding="8dp"
            android:src="@drawable/tap_ic_taptalk_logo"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_button_close"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginTop="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ttl_ic_close_grey"
            android:tint="@color/ttlIconNavBarCloseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_title"
            style="@style/ttlTitleLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/ttl_create_form_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_label_description"
            style="@style/ttlCreateFormDescriptionLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ttl_create_form_description"
            app:layout_constraintEnd_toEndOf="@id/tv_label_title"
            app:layout_constraintStart_toStartOf="@id/tv_label_title"
            app:layout_constraintTop_toBottomOf="@id/tv_label_title" />

        <View
            android:id="@+id/v_form_header_decoration_background"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ttl_bg_form_header_decoration_white"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="@id/tv_label_title"
            app:layout_constraintStart_toStartOf="@id/tv_label_title"
            app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

        <View
            android:id="@+id/v_form_header_decoration"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="24dp"
            android:alpha="0.1"
            android:background="@drawable/ttl_bg_form_header_decoration"
            app:layout_constraintEnd_toEndOf="@id/v_form_header_decoration_background"
            app:layout_constraintStart_toStartOf="@id/v_form_header_decoration_background"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_description" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ttl_bg_white_rounded_bottom_8dp"
            android:elevation="2dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/v_form_header_decoration_background"
            app:layout_constraintStart_toStartOf="@id/v_form_header_decoration_background"
            app:layout_constraintTop_toBottomOf="@id/v_form_header_decoration">

            <TextView
                android:id="@+id/tv_label_full_name"
                style="@style/ttlFormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/ttl_full_name"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_full_name"
                style="@style/ttlFormTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ttl_bg_text_field_inactive"
                android:hint="@string/ttl_enter_full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="16dp"
                android:textCursorDrawable="@drawable/ttl_cursor_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_label_email_address"
                style="@style/ttlFormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/ttl_email_address"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_email_address"
                style="@style/ttlFormTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ttl_bg_text_field_inactive"
                android:hint="@string/ttl_enter_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:textCursorDrawable="@drawable/ttl_cursor_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_label_topic"
                style="@style/ttlFormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/ttl_topic" />

            <FrameLayout
                android:id="@+id/fl_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp">

                <Spinner
                    android:id="@+id/sp_select_topic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ttl_bg_text_field_inactive"
                    android:overlapAnchor="false"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="56dp"
                    android:paddingRight="56dp"
                    android:paddingBottom="16dp" />

                <ImageView
                    android:id="@+id/iv_select_topic_drop_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ttl_ic_chevron_down_orange"
                    android:tint="@color/ttlFormTextFieldColor"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_select_topic_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ttl_ic_loading_progress_circle_white"
                    android:tint="@color/ttlIconLoadingProgressPrimary" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_label_message"
                style="@style/ttlFormLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/ttl_message" />

            <EditText
                android:id="@+id/et_message"
                style="@style/ttlFormTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ttl_bg_text_field_inactive"
                android:gravity="top"
                android:hint="@string/ttl_type_message_here"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="2"
                android:padding="16dp"
                android:textCursorDrawable="@drawable/ttl_cursor_color" />

            <LinearLayout
                android:id="@+id/ll_button_send_message"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/ttl_bg_button_active_ripple"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_button_send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ttl_ic_send_white"
                    android:tint="@color/ttlButtonIconColor" />

                <TextView
                    android:id="@+id/tv_button_send_message"
                    style="@style/ttlButtonLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/ttl_send_message" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
