<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/ttlDefaultNavBarBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_button_close"
        android:layout_width="?android:attr/actionBarSize"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/actionBarItemBackground"
        android:padding="16dp"
        android:src="@drawable/ttl_ic_close_grey"
        android:tint="@color/ttlIconNavBarCloseButton"
        app:layout_constraintBottom_toTopOf="@id/tv_label_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UseAppTint"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_label_title"
        style="@style/ttlTitleLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/ttl_home_title"
        app:layout_constraintBottom_toTopOf="@id/tv_label_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_button_close" />

    <TextView
        android:id="@+id/tv_label_description"
        style="@style/ttlHomeDescriptionLabelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ttl_home_description"
        app:layout_constraintBottom_toTopOf="@id/cl_channel_and_direct_message"
        app:layout_constraintEnd_toEndOf="@id/tv_label_title"
        app:layout_constraintStart_toStartOf="@id/tv_label_title"
        app:layout_constraintTop_toBottomOf="@id/tv_label_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_channel_and_direct_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ttl_bg_white_rounded_8dp"
        android:elevation="2dp"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/cl_case_list"
        app:layout_constraintEnd_toEndOf="@id/tv_label_description"
        app:layout_constraintStart_toStartOf="@id/tv_label_description"
        app:layout_constraintTop_toBottomOf="@id/tv_label_description">

        <TextView
            android:id="@+id/tv_label_channel"
            style="@style/ttlHomeInfoLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ttl_home_channel_description"
            app:layout_constraintBottom_toTopOf="@id/rv_channel_links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_channel_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-6dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="-6dp"
            app:layout_constraintBottom_toTopOf="@id/fl_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_channel" />

        <FrameLayout
            android:id="@+id/fl_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ll_button_message_directly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_channel_links">

            <View
                android:id="@+id/v_or_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/tapTransparentBlack1910" />

            <TextView
                android:id="@+id/tv_label_channel"
                style="@style/ttlHomeInfoLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/ttlWhite"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/ttl_or_uppercase" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_button_message_directly"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/tap_bg_button_border_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_or"
            app:layout_goneMarginTop="0dp">

            <ImageView
                android:id="@+id/iv_button_message_directly"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ttl_ic_send_white"
                android:tint="@color/ttlButtonActiveBorderColor" />

            <TextView
                android:id="@+id/tv_button_message_directly"
                style="@style/ttlButtonLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/ttl_message_us_directly"
                android:textColor="@color/ttlColorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_case_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ttl_bg_white_rounded_8dp"
        android:elevation="2dp"
        android:paddingStart="12dp"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_channel_and_direct_message">

        <TextView
            android:id="@+id/tv_label_your_messages"
            style="@style/ttlHomeInfoLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/ttl_your_messages"
            app:layout_constraintBottom_toTopOf="@id/rv_channel_links"
            app:layout_constraintEnd_toStartOf="@id/tv_button_see_all_messages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_button_see_all_messages"
            style="@style/ttlHomeButtonLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttl_see_all_messages"
            app:layout_constraintBottom_toTopOf="@id/rv_channel_links"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <io.taptalk.TapTalk.Helper.TAPChatRecyclerView
            android:id="@+id/rv_case_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-12dp"
            android:layout_marginEnd="-12dp"
            app:layout_constraintBottom_toTopOf="@id/fl_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_button_see_all_messages"
            tools:background="@color/ttlDefaultBackgroundColor"
            tools:layout_height="48dp" />

        <LinearLayout
            android:id="@+id/ll_button_new_message"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tap_bg_button_border_ripple"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_case_list"
            app:layout_goneMarginTop="0dp">

            <TextView
                android:id="@+id/tv_button_new_message"
                style="@style/ttlButtonLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/ttl_new_message"
                android:textColor="@color/ttlColorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
